--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/server.js",
+    "start": "node dist/server.js",
     "start-dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel ./src -d ./dist",
     "db:status": "sequelize db:migrate:status",
     "db:drop": "sequelize db:migrate:undo:all",
     "db:migrate": "sequelize db:migrate",
@@ -17,11 +18,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/node": "^7.8.7",
     "nodemon": "^2.0.1",
     "sequelize-cli": "^5.5.1",
     "youch": "^2.0.10"
   },
   "dependencies": {
+    "@babel/runtime": "^7.9.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
